<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detail.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/main_margin" >

        <ImageView
            android:id="@+id/iv_detail_poster"
            android:layout_width="128dp"
            android:layout_height="192dp"
            android:src="@drawable/placeholder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/poster" />

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_detail_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv_detail_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/large_text" />

        <TextView
            android:id="@+id/tv_label_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:text="@string/genre"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

        <TextView
            android:id="@+id/tv_detail_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/genre"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_genre"
            app:layout_constraintStart_toStartOf="@+id/tv_label_genre"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_genre" />

        <TextView
            android:id="@+id/tv_label_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            tools:text="@string/date"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_genre"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_genre"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre" />

        <TextView
            android:id="@+id/tv_detail_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="@string/date_example"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_date"
            app:layout_constraintStart_toStartOf="@+id/tv_label_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_date" />

        <TextView
            android:id="@+id/tv_detail_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/score_background"
            android:textStyle="bold"
            android:padding="8dp"
            tools:text="@string/score"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_detail_poster"
            app:layout_constraintEnd_toEndOf="@+id/iv_detail_poster" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>