<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_camera"
        android:title="@string/movies" />

    <item
        android:id="@+id/navigation_tv"
        android:icon="@drawable/ic_tv"
        android:title="@string/tv_shows" />

    <item
        android:id="@+id/navigation_watchlist"
        android:icon="@drawable/ic_ticket"
        android:title="@string/watchlist" />

</menu>